fixed comment avatars so they show up, position needs to be relative for z-index to work

--- a/gitlab_github_theme.css
+++ b/gitlab_github_theme.css
@@ -96,6 +96,9 @@
         box-shadow: 0px 0px 0px 0px;
         height: 16px;
         width: 16px;
+        position: relative;
+        z-index: 999;
+        margin: 9px 5px;
     }
 
     .timeline .timeline-entry .timeline-entry-inner .timeline-content {
